--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 # CocoaPods - Only use to conserve bandwidth / Save time on Pushing
 #           - Also handy if you have a large number of dependant pods
 #           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGNORE THE LOCK FILE
-Clone_Mongli/Pods/
+Pods/
 
 ### Swift ###
 # Xcode
@@ -110,5 +110,7 @@ iOSInjectionProject/
 !*.xcodeproj/xcshareddata/
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
+
+.DS_Store
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,cocoapods,xcode
